# aoe2de_head2head

./: .gitignore  .travis.yml  Cargo.toml  Procfile  README.md  app.json  build.rs  package.json  rustfmt.toml
src/: endpoints.rs  error.rs  fetch.rs  format.rs  main.rs  player_tracker.rs  server.rs
src/server/: cache.rs  endpoints.rs  mod.rs  server.rs
ui/: .gitignore  craco.config.js  package.json
ui/public/: index.html
ui/src/: App.tsx  theme.ts  utils.ts
ui/src/components/: CurrentGameInfo.tsx  PlayerInfo.tsx  PlayerLookupInput.tsx  PlayerNameLink.tsx  PlayerRecordsTable.tsx
ui/src/elements/: TextInput.tsx
ui/src/hooks/: axiosHooks.tsx
