[package]
name = "aoe2de_head2head"
version = "0.2.0"
authors = ["Benjamin Brown <benjamin.t.brown@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_derive = "1.0.106"
serde_json = "1.0.52"
chrono = "0.4.11"
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-files = "0.2.2"
# tokio = { version = "0.2", features = ["macros"] }
