[package]
name = "aoe2de_head2head"
version = "0.2.1"
authors = ["Benjamin Brown <benjamin.t.brown@hotmail.com>"]
edition = "2018"
description = "A server and command line app that uses the aoe2.net api to lookup an Age of Empires 2: DE player by team ranking and output their win/loss records vs other players."
repository = "https://github.com/benjamin-t-brown/chasmatica"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_derive = "1.0.106"
serde_json = "1.0.52"
chrono = "0.4.11"
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-files = "0.2.2"

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]
# tokio = { version = "0.2", features = ["macros"] }
